Clicking "Go Back" from a safe browsing warning from an iframe should navigate the WKWebView back to the previous page https://bugs.webkit.org/show_bug.cgi?id=196665 <rdar://45115669>

Reviewed by Geoff Garen.

Source/WebKit:

It is insufficient to just not navigate the subframe.  We must leave the page that contained it.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _showSafeBrowsingWarning:completionHandler:]):
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::showSafeBrowsingWarning):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:
(goBack):
(+[SimpleLookupContext sharedLookupContext]):
(-[SimpleLookupContext lookUpURL:completionHandler:]):
(TEST):
(+[Simple3LookupContext sharedLookupContext]): Deleted.
(-[Simple3LookupContext lookUpURL:completionHandler:]): Deleted.



Canonical link: https://commits.webkit.org/210942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243956 268f45cc-cd09-0410-ab3c-d52691b4dbfc