Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm
@@ -220,12 +220,15 @@ static void checkTitleAndClick(UIButton *button, const char* expectedTitle)
 }
 #endif
 
-template<typename ViewType> void goBack(ViewType *view)
+template<typename ViewType> void goBack(ViewType *view, bool mainFrame = true)
 {
     WKWebView *webView = (WKWebView *)view.superview;
     auto box = view.subviews.firstObject;
     checkTitleAndClick(box.subviews[3], "Go Back");
-    EXPECT_EQ([webView _safeBrowsingWarning], nil);
+    if (mainFrame)
+        EXPECT_EQ([webView _safeBrowsingWarning], nil);
+    else
+        EXPECT_NE([webView _safeBrowsingWarning], nil);
 }
 
 TEST(SafeBrowsing, GoBack)
@@ -368,21 +371,23 @@ TEST(SafeBrowsing, URLObservation)
     }
 }
 
-@interface Simple3LookupContext : NSObject
+static RetainPtr<NSString> phishingResourceName;
+
+@interface SimpleLookupContext : NSObject
 @end
 
-@implementation Simple3LookupContext
+@implementation SimpleLookupContext
 
-+ (Simple3LookupContext *)sharedLookupContext
++ (SimpleLookupContext *)sharedLookupContext
 {
-    static Simple3LookupContext *context = [[Simple3LookupContext alloc] init];
+    static SimpleLookupContext *context = [[SimpleLookupContext alloc] init];
     return context;
 }
 
 - (void)lookUpURL:(NSURL *)URL completionHandler:(void (^)(TestLookupResult *, NSError *))completionHandler
 {
     BOOL phishing = NO;
-    if ([URL isEqual:resourceURL(@"simple3")])
+    if ([URL isEqual:resourceURL(phishingResourceName.get())])
         phishing = YES;
     completionHandler([TestLookupResult resultWithResults:@[[TestServiceLookupResult resultWithProvider:@"TestProvider" phishing:phishing malware:NO unwantedSoftware:NO]]], nil);
 }
@@ -405,7 +410,8 @@ static bool navigationFinished;
 
 TEST(SafeBrowsing, WKWebViewGoBack)
 {
-    ClassMethodSwizzler swizzler(objc_getClass("SSBLookupContext"), @selector(sharedLookupContext), [Simple3LookupContext methodForSelector:@selector(sharedLookupContext)]);
+    phishingResourceName = @"simple3";
+    ClassMethodSwizzler swizzler(objc_getClass("SSBLookupContext"), @selector(sharedLookupContext), [SimpleLookupContext methodForSelector:@selector(sharedLookupContext)]);
     
     auto delegate = adoptNS([WKWebViewGoBackNavigationDelegate new]);
     auto webView = adoptNS([WKWebView new]);
@@ -423,6 +429,27 @@ TEST(SafeBrowsing, WKWebViewGoBack)
     while (![webView _safeBrowsingWarning])
         TestWebKitAPI::Util::spinRunLoop();
     [webView goBack];
+    TestWebKitAPI::Util::run(&navigationFinished);
+    EXPECT_TRUE([[webView URL] isEqual:resourceURL(@"simple2")]);
+}
+
+TEST(SafeBrowsing, WKWebViewGoBackIFrame)
+{
+    phishingResourceName = @"simple";
+    ClassMethodSwizzler swizzler(objc_getClass("SSBLookupContext"), @selector(sharedLookupContext), [SimpleLookupContext methodForSelector:@selector(sharedLookupContext)]);
+    
+    auto delegate = adoptNS([WKWebViewGoBackNavigationDelegate new]);
+    auto webView = adoptNS([WKWebView new]);
+    [webView configuration].preferences._safeBrowsingEnabled = YES;
+    [webView setNavigationDelegate:delegate.get()];
+    [webView loadRequest:[NSURLRequest requestWithURL:resourceURL(@"simple2")]];
+    TestWebKitAPI::Util::run(&navigationFinished);
+    
+    [webView loadRequest:[NSURLRequest requestWithURL:resourceURL(@"simple-iframe")]];
+    while (![webView _safeBrowsingWarning])
+        TestWebKitAPI::Util::spinRunLoop();
+    navigationFinished = false;
+    goBack([webView _safeBrowsingWarning], false);
     TestWebKitAPI::Util::run(&navigationFinished);
     EXPECT_TRUE([[webView URL] isEqual:resourceURL(@"simple2")]);
 }
